[package]
name = "simpleml_macro"
version = "1.0.0"
edition = "2021"
description = "A macro for placing SimpleML content directly into Rust source code."
license = "MIT"
repository = "https://github.com/mr-adult/SimpleML"
documentation = "https://docs.rs/simpleml/latest/simpleml/"
keywords = ["sml", "simple", "markup", "language", "ReliableTXT"]

[lib]
proc-macro = true

[dependencies]
tree_iterators_rs = "1.2.1"
simpleml = "1.0.0"
