[package]
name = "simpleml_macro"
version = "2.0.0"
edition = "2021"
description = "A macro for placing SimpleML content directly into Rust source code."
license = "MIT"
repository = "https://github.com/mr-adult/SimpleML"
documentation = "https://docs.rs/simpleml_macro/latest/simpleml_macro/"
keywords = ["sml", "simple", "markup", "language", "ReliableTXT"]

[lib]
proc-macro = true

[dependencies]
tree_iterators_rs = "2.0"
simpleml = { path = "../lib", version = "2.0" }
