[package]
name = "simpleml_macro"
version = "3.0.1"
edition = "2021"
description = "A macro for placing SimpleML content directly into Rust source code."
license = "MIT"
repository = "https://github.com/mr-adult/SimpleML"
documentation = "https://docs.rs/simpleml_macro/latest/simpleml_macro/"
keywords = ["sml", "simple", "markup", "language", "ReliableTXT"]

[lib]
proc-macro = true

[dependencies]
tree_iterators_rs = "3.2"
simpleml = { path = "../lib", version = "4.0" }
