[package]
name = "macro_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simpleml = { path = "../lib", version = "2.0" }
simpleml_macro = { path = "../macro", version = "2.0"}
tree_iterators_rs = "2.0"